k8s/namespaces/media/ersatztv/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ersatztv
  namespace: media
  labels:
    app.kubernetes.io/name: ersatztv
    app.kubernetes.io/managed-by: flux
spec:
  selector:
    app.kubernetes.io/name: ersatztv
    app.kubernetes.io/managed-by: flux
  ports:
    - port: 8409
      targetPort: 8409
      protocol: TCP
      name: ersatztv-ui
  type: ClusterIP
