k8s/namespaces/media/ersatztv/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ersatztv-https
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ersatztv.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
        - name: authentik
          namespace: traefik
      services:
        - name: ersatztv
          port: 8409
  tls: 
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ersatztv-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`ersatztv.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
        - name: redirect-https
          namespace: traefik
      services:
        - name: ersatztv
          port: 8409
