k8s/namespaces/media/ersatztv/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ersatztv-https
  namespace: media
  labels:
    app.kubernetes.io/name: ersatztv
    app.kubernetes.io/managed-by: flux
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ersatztv.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
        - name: authentik
          namespace: traefik
      services:
        - name: ersatztv
          port: 8409
  tls: 
    secretName: oglesby-io-tls

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ersatztv-http
  namespace: media
  labels:
    app.kubernetes.io/name: ersatztv
    app.kubernetes.io/managed-by: flux
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`ersatztv.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
        - name: redirect-https
          namespace: traefik
      services:
        - name: ersatztv
          port: 8409
