k8s/namespaces/media/ersatztv/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ersatztv
  namespace: media
  labels:
    app.kubernetes.io/name: ersatztv
    app.kubernetes.io/managed-by: flux
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ersatztv
      app.kubernetes.io/managed-by: flux
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: media
      ports:
        - port: 8409
          protocol: TCP
  egress:
    - {}
